# smartplug_slack_notifier

./: Cargo.toml  README.md  rustfmt.toml
src/: main.rs  notifier.rs  service.rs
src/notifier/: slack.rs
