[package]
name = "smartplug_slack_notifier"
version = "0.1.1"
authors = ["Aaron Landwehr <aaron.landwehr@chipdesignsystems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde_derive]
version ="1.0.118"
default-features = true

[dependencies.serde]
version ="1.0.118"
default-features = true
features = ["derive"]

[dependencies]
hs100api = "0.1.1"
windows-service = "0.3.0"
whoami = "1.0.0"
serde_json= "1.0"

[dependencies.slack_api]
version = "0.23.1"
default-features = true
features = ["sync", "reqwest_blocking"]
